--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>My First Ever Github Repo</title>
 </head>
 <body>
-    
+    <div>
+        <h3>my first werbsite </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem mollitia deserunt voluptate nam officiis vero fuga nihil molestias tenetur? Dignissimos? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates facilis incidunt necessitatibus recusandae expedita quibusdam repellendus! Impedit, ducimus excepturi. Voluptatem?
+        </p>
+        
+
+    </div>
 </body>
 </html>
